--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <p>Hi, you can view or download my portfolio PDF below:</p>
   <embed src="portfolio.pdf" type="application/pdf" width="80%" height="600px" />
   <br><br>
-  <a href="portfolio.pdf" download>⬇️ Download Portfolio</a>
+  <a href="Portfolio.pdf" download>⬇️ Download Portfolio</a>
 </body>
 </html>
