--- a/index.html
+++ b/index.html
@@ -4,12 +4,88 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio - Rafly Triansyah Praseptyo</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f6f9;
+      color: #333;
+      text-align: center;
+    }
+    header {
+      background: #1e293b;
+      color: #fff;
+      padding: 2rem 1rem;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+    header p {
+      margin: 0.5rem 0 0;
+      font-size: 1rem;
+      opacity: 0.9;
+    }
+    main {
+      padding: 2rem 1rem;
+    }
+    .pdf-viewer {
+      margin: 1.5rem auto;
+      max-width: 900px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      border-radius: 8px;
+      overflow: hidden;
+    }
+    .download-btn {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.75rem 1.5rem;
+      background: #2563eb;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+    .download-btn:hover {
+      background: #1d4ed8;
+    }
+    footer {
+      margin-top: 2rem;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #555;
+    }
+    footer a {
+      color: #2563eb;
+      text-decoration: none;
+    }
+    footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
-<body style="text-align:center; font-family:Arial, sans-serif;">
-  <h1>📊 Data Analyst Portfolio</h1>
-  <p>Hi, you can view or download my portfolio PDF below:</p>
-  <embed src="portfolio.pdf" type="application/pdf" width="80%" height="600px" />
-  <br><br>
-  <a href="Portfolio.pdf" download>⬇️ Download Portfolio</a>
+<body>
+  <header>
+    <h1>📊 Data Analyst Portfolio</h1>
+    <p>Rafly Triansyah Praseptyo</p>
+  </header>
+
+  <main>
+    <p>You can view or download my portfolio PDF below:</p>
+    <div class="pdf-viewer">
+      <embed src="portfolio.pdf" type="application/pdf" width="100%" height="600px" />
+    </div>
+    <a href="portfolio.pdf" download class="download-btn">⬇️ Download Portfolio</a>
+  </main>
+
+  <footer>
+    <p>Connect with me on 
+      <a href="https://linkedin.com/in/raflypraseptyo" target="_blank">LinkedIn</a> | 
+      <a href="https://github.com/raflypraseptyo" target="_blank">GitHub</a>
+    </p>
+  </footer>
 </body>
 </html>
